@@ -2,6 +2,9 @@
 Changes with Apache Traffic Server 4.2.0
 
 
+  *) [TS-2420] Remove STAT_SYNC, CONF_SYNC, and REM_SYNC threads and schedule those
+   continuations in ET_TASK
+
   *) [TS-2372] Enable TLS perfect forward security with ECDHE.
 
   *) [TS-2416] Make TLS the session timeout threshold configurable.
